fix: video carousel fixed but playing videos still overlap

--- a/styles/AvatarsSection.module.css
+++ b/styles/AvatarsSection.module.css
@@ -6,13 +6,13 @@
   background-attachment: scroll;
   background-size: cover !important;
   /* position: relative; */
-  top: 0;
+  /* top: 0; */
   /* height: 100vh; */
   display: block;
 
-  @media (min-width: 1024px) {
+  /* @media (min-width: 1024px) {
     height: 100vh;
-  }
+  } */
 }
 
 .sandboxLogo {
